syntax = "proto3";

package todoPackage;

service Todo {
  rpc createTodo(TodoItem) returns (TodoItem);
  rpc readTodos(voidVal) returns (TodoItems);
  rpc readTodosStream(voidVal) returns (stream TodoItem);
}

message voidVal {}

message TodoItem {
  int32 id = 1;
  string text = 2;
}

message TodoItems {
  repeated TodoItem items = 1;
}